--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,6 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="intent">跳转</string>
     <string name="hello_2">返回</string>
-    <string name="insert">insert</string>
+    <string name="insert">greet_form_url</string>
+    <string name="json">json</string>
 </resources>
